syntax = "proto3";
option java_multiple_files = true;
package sep3datalayer.grpc.protobuf;
option csharp_namespace = "sep3client.bookingaddon";

message CreatingBookingAddOn{
  int32 bookingId = 1;
  string name = 2;
  int32 price = 3;
  int32 quantity = 4;
}

message BookingAddOnGrpc{
  int32 id = 1;
  int32 bookingId = 2;
  string name = 3;
  int32 price = 4;
  int32 quantity = 5;
}

message BookingAddOnList{
  repeated BookingAddOnGrpc bookingAddOns = 1;
}

service BookingAddOnService{
  rpc CreateBookingAddOn(CreatingBookingAddOn) returns (BookingAddOnGrpc);
}